# parser

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  write_data.py
app/: config.py  main.py  parse_types.py  parser.py  pydantic_classes.py  utils.py
