[tool.poetry]
name = "epal"
version = "0.1.0"
description = "Epal parser."
authors = ["Greatsol <ilia2309ilia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.10.2"
tenacity = "^8.0.1"
pandas = "^1.5.0"
PySocks = "^1.7.1"
loguru = "^0.6.0"
openpyxl = "^3.0.10"
pymongo = "^4.2.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
